[package]
name = "railplot"
version = "0.3.2"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "*"
rlua = "*"
failure ="*"
exitfailure ="*"
serde_json ="*"

minidom = "*"
quick-xml="*"
ordered-float="*"
diffsolver = {path = "lib/diffsolver"}
railplotlib = {path = "lib/railplotlib"}
itertools = "*"

log = "0.4"
env_logger = "0.6"
