[package]
name = "railplot"
version = "0.3.4"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "*"
rlua = "*"
failure ="*"
exitfailure ="*"
serde_json ="*"
minidom = "0.10"
quick-xml = "0.13"
ordered-float="*"
diffsolver = {path = "lib/diffsolver"}
railplotlib = {path = "lib/railplotlib"}
itertools = "*"
log = "0.4"
env_logger = "0.6"
