[package]
name = "railplot"
version = "0.1.0"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "*"
rlua = "*"
failure ="*"
exitfailure ="*"
serde_json ="*"

minidom = "*"
quick-xml="*"
ordered-float="*"
diffsolver = {path = "../diffsolver"}
disjoint-sets="*"
