[package]
name = "vis_rs"
version = "0.1.0"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]

[dependencies]
clap = "*"
failure = "*"
failure_derive = "*"
z3 = "*"
rolling = { git = "https://github.com/koengit/trainspotting.git" }
serde_json = "*"
svg = "*"
diffsolver = { path = "../../lib/diffsolver" }
itertools="*"
lp-modeler ="*"
disjoint-sets = "*"
ordered-float = "*"

[lib]
crate-type=["rlib","staticlib"]

