[package]
name = "railplotlib"
version = "0.1.0"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[target."cfg(windows)".dependencies]
winapi = {version = "0.3", features = ["debugapi"] }

[dependencies]
diffsolver = { path = "../diffsolver" }
disjoint-sets = "0.4"
ordered-float = "1.0"
log = { version = "0.4", features = ["release_max_level_info"] }
permutation = "0.2"
